--- a/database.yml
+++ b/database.yml
@@ -1,6 +1,6 @@
 development:
   dialect: postgres
-  database: profileapi_development
+  database: postgres
   user: postgres
   password: postgres
   host: 127.0.0.1
